2009-07-27  higepon  <higepon@users.sourceforge.jp>

        * library.scm (create-mosh-cache-dir): Now mosh uses /tmp, if HOME not found.

        * lib/memcached.ss : Now memcached-get returns bytevector.

        * Makefile.am (install-data-hook): Fixed permission denied "prefix.txt".

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss: Fixed a bug REPL didn't know about mosh-cache-dir. (issue 79).

2009-07-24  OKUMURA Yuki <mjt@cltn.org>

        * configure.ac: x86_64: -msse3, -mfpmath=sse removed.

2009-07-24  higepon  <higepon@users.sourceforge.jp>

        * lib/memcached.ss: Added but undocumented.

        * lib/mosh/cgi.ss (encode): Fixed a bug in encode procedure.

        * Profiler shows a correct name for callable object.

2009-07-23  higepon  <higepon@users.sourceforge.jp>

        * eqv? and equal? now guarantee #t when given two NaNs (unspecified by R6RS).

2009-07-20  higepon  <higepon@users.sourceforge.jp>

        * Flonum.h : Changed the equivalence of nan. (See Issue 78).

        * test/number.scm : Added.

        * FFI.h : Changed the offset not to scale to size of Type (See Issue 70).

        * mosh.1, mosh_config.1: Added man by dmoerner. (Issue 77: Manpages for mosh)

2009-07-19  higepon  <higepon@users.sourceforge.jp>

        * NumberReader.y : Fixed (=  #i1.2e-3 #i12e-4) => #f should be #t (Issue 75 pointed out by mrc.mgg).

2009-07-18  higepon  <higepon@users.sourceforge.jp>

        * main.cpp: Fixed the type pointed out by dmoerner. (Issue 76)

2009-07-17  higepon  <higepon@users.sourceforge.jp>

        * Added auto-compilation mode (experimental).

2009-07-13  higepon  <higepon@users.sourceforge.jp>

        * Rewrote join-wraps in C++.

        * same-marks*?
          same-marks?
          id->real-label

          Rewrote in C++ for performance.

2009-07-12  higepon  <higepon@users.sourceforge.jp>

        * VM-Run.cpp (VM::run): Added SIMPLE_STRUCT_REF instruction.

2009-07-10  higepon  <higepon@users.sourceforge.jp>
